--- a/views/index.erb
+++ b/views/index.erb
@@ -3,17 +3,12 @@
 <% end %>
 
 <!-- why does it break when this is included in the form? method="post" -->
-<form action="/named-cat">
+<form action="/named-cat" method='post'>
   <input type="text" name="name">
   <input type="text" name="age">
   <input type="submit" value="Submit">
 </form>
 
-<!-- <form action="/named-cat">
-  <input type="text" name="name">
-  <input type="submit" value="Submit">
-</form>
--->
 
 <div style='border: 3px dashed red'>
   <img src='http://bit.ly/1eze8aE'>
